# paper2zh

./: .env.example  .gitignore  README.md  pyproject.toml
src/paper2zh/: __init__.py  cli.py  converter.py  naming.py  pipeline.py  splitter.py  tagger.py  translator.py
src/paper2zh/web/: __init__.py  app.py  models.py  tasks.py
src/paper2zh/web/static/: index.html
